syntax = "proto3";
package carkot;

message RouteDoneRequest {
    int32 uid = 1;
}

message RouteDoneResponse {
    int32 code = 1;
}
